Fixes to spacing of restricted content sections

--- a/static/css/sass/cdr_ui_styles.scss
+++ b/static/css/sass/cdr_ui_styles.scss
@@ -713,7 +713,6 @@ table.dataTable {
   .restricted-access {
     border: 1px solid;
     border-radius: 5px;
-    padding: 15px;
 
     .button {
       text-align: left;
